--- a/src/features/playlists/ui/Playlists/Playlists.module.css
+++ b/src/features/playlists/ui/Playlists/Playlists.module.css
@@ -1,5 +1,16 @@
-.item {
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #ddd;
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.heading {
+    text-align: center;
+}
+
+.typeSwitcherWrapper {
+    display: flex;
+    justify-content: center;
 }
