--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,21 @@ a:hover {
     text-decoration: underline;
 }
 
+
+/* Item: PlaylistItem, TrackItem  */
+.item {
+    padding: 16px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    transition: box-shadow 0.2s ease;
+    width: 345px;
+}
+
+.item:hover {
+    cursor: pointer;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+
