--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ a:hover {
     width: 345px;
 }
 
+.item--fullwidth {
+    width: 100%;
+}
+
 .item:hover {
     cursor: pointer;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
