--- a/apps/spotifun/src/features/player/ui/Players/PlayerMob/PlayerMob.module.scss
+++ b/apps/spotifun/src/features/player/ui/Players/PlayerMob/PlayerMob.module.scss
@@ -31,7 +31,7 @@
 
     content: '';
 
-    background: url('../../../assets/images/player-icons/down-arrow.svg') center no-repeat;
+    background: url('../../../lib/img/down-arrow.svg') center no-repeat;
     background-size: cover;
   }
 
