--- a/apps/spotifun/src/index.css
+++ b/apps/spotifun/src/index.css
@@ -2,7 +2,16 @@
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
+
+    /* Variables */
+    --highlight: #007bff;
+    --main-text: #fff;
+    --main-bg: #000;
+    --player-play-icon: url('./features/player/lib/img/play_blue.svg');
+    --player-pause-icon: url('./features/player/lib/img/pause_blue.svg');
+    --player-current-position: url('./features/player/lib/img/current-position_blue.svg')
 }
+
 
 /* Link  */
 .link {
