SP-8-FIX feat: enhance error handling and improve form submissions across various components

--- a/apps/spotifun-rtk/src/index.css
+++ b/apps/spotifun-rtk/src/index.css
@@ -9,9 +9,8 @@
   --main-bg: #000;
   --player-play-icon: url('features/player/lib/img/play_blue.svg');
   --player-pause-icon: url('features/player/lib/img/pause_blue.svg');
-  --player-current-position: url('features/player/lib/img/current-position_blue.svg')
+  --player-current-position: url('features/player/lib/img/current-position_blue.svg');
 }
-
 
 /* Link  */
 .link {
@@ -27,7 +26,6 @@
 .activeLink {
   font-weight: bold;
 }
-
 
 /* Item: PlaylistItem, TrackItem  */
 .item {
@@ -55,7 +53,6 @@
   flex-direction: column;
   gap: 10px;
 }
-
 
 /* Flex container */
 .flex-container {
@@ -104,6 +101,11 @@
 }
 
 .error {
+  width: 100%;
+  max-width: 600px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   display: block;
   color: red;
 }
