feat: add autoComplete component

--- a/apps/musicfun-rtk/src/common/components/IconButton/IconButton.module.css
+++ b/apps/musicfun-rtk/src/common/components/IconButton/IconButton.module.css
@@ -1,4 +1,7 @@
 .btnIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: transparent;
   border: none;
   outline: none;
