feat: added common components & implemented sorting playlists logic

--- a/apps/musicfun-tanstack/src/modules/musicstaff/playlists/ui/PlaylistsPage/PlaylistsPage.module.css
+++ b/apps/musicfun-tanstack/src/modules/musicstaff/playlists/ui/PlaylistsPage/PlaylistsPage.module.css
@@ -1,3 +1,10 @@
+.controlsRow {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .typeSwitcherWrapper {
   display: flex;
   justify-content: center;
