feat: integrate PlaylistCardSkeleton for loading states and enhance MainPage with skeleton loading

--- a/apps/musicfun-rtk-query/src/features/playlists/ui/PlaylistCard/PlaylistCard.module.css
+++ b/apps/musicfun-rtk-query/src/features/playlists/ui/PlaylistCard/PlaylistCard.module.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+
   width: 264px;
+  min-height: 267px;
 }
 
 .image {
@@ -34,4 +36,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.reactionButtons {
+  margin-top: auto;
 }
