feat: update playlist management with tag support and UI enhancements

--- a/apps/musicfun-rtk-query/src/features/playlists/ui/PlaylistCard/PlaylistCard.module.css
+++ b/apps/musicfun-rtk-query/src/features/playlists/ui/PlaylistCard/PlaylistCard.module.css
@@ -11,6 +11,12 @@
   min-height: 267px;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .image {
   overflow: hidden;
   height: 153px;
