rtk-query: tracks updates

--- a/apps/musicfun-rtk-query/src/features/tracks/ui/CreateEditTrackModal/CreateEditTrackModal.module.css
+++ b/apps/musicfun-rtk-query/src/features/tracks/ui/CreateEditTrackModal/CreateEditTrackModal.module.css
@@ -20,3 +20,9 @@
   width: 280px;
   margin: 0 auto;
 }
+
+.buttonsRow {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 16px;
+}
