--- a/apps/musicfun-rtk-query/src/features/tracks/ui/CreateEditTrackModal/CreateEditTrackModal.module.css
+++ b/apps/musicfun-rtk-query/src/features/tracks/ui/CreateEditTrackModal/CreateEditTrackModal.module.css
@@ -3,6 +3,11 @@
   max-width: 745px;
 }
 
+.uploadButton {
+  width: 200px;
+  margin: 0 auto;
+}
+
 .form {
   display: flex;
   flex-direction: column;
