--- a/apps/musicfun-tanstack-query-small-example/src/app/styles/index.css
+++ b/apps/musicfun-tanstack-query-small-example/src/app/styles/index.css
@@ -1,8 +1,17 @@
 body {
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    sans-serif;
   background: #060707;
 
-  color: white;
+  color: #9c9c9c;
 }
 a {
-  color: white;
+  color: #9c9c9c;
 }
