--- a/apps/musicfun-tanstack-query-zustand/src/entities/playlist/ui/PlaylistCard/PlaylistCard.module.css
+++ b/apps/musicfun-tanstack-query-zustand/src/entities/playlist/ui/PlaylistCard/PlaylistCard.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 4px;
   width: 264px;
+  min-height: 100%;
 }
 
 .image {
@@ -34,4 +35,17 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  flex: 1;
+}
+
+.btnDelete {
+    width: 40px;
+    height: 30px;
+    border-radius: 10%;
+    background: rgba(241, 33, 33, 0.9);
+    border: none;
+    font-size: 12px;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.2s ease;
 }
