--- a/apps/musicfun-tanstack-query-zustand/src/pages/PlaylistPage/ui/ControlPanel/ControlPanel.module.css
+++ b/apps/musicfun-tanstack-query-zustand/src/pages/PlaylistPage/ui/ControlPanel/ControlPanel.module.css
@@ -9,3 +9,17 @@
   width: 80px;
   height: 80px;
 }
+
+.menuIcon {
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+}
+
+.deleteItem {
+  color: #eb1616;
+
+  &:hover {
+   color: #ffeaea;
+  }
+}
