--- a/apps/musicfun-tanstack-query-zustand/src/shared/components/CoverImage/CoverImage.styles.module.scss
+++ b/apps/musicfun-tanstack-query-zustand/src/shared/components/CoverImage/CoverImage.styles.module.scss
@@ -1,9 +1,6 @@
-.coverImageWrapper {
+.coverImage {
   width: 100%;
   height: 100%;
-
-  > img {
-    width: 100%;
-    height: 100%;
-  }
+  object-fit: cover;
+  display: block;
 }
